<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shareLayout">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <Button
                        android:text="@string/dialog_share_button_twitter"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/share_twitter"
                        android:drawableTop="@drawable/twitter" style="@style/Widget.AppCompat.Button.Borderless"
                />
                <Button
                        android:text="@string/dialog_share_button_link"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" android:id="@+id/share_link"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:drawableTop="@drawable/link"/>
                <Button
                        android:text="@string/dialog_share_button_qrcode"
                        android:layout_width="0dp"
                        android:id="@+id/share_qrcode" android:layout_height="wrap_content" android:layout_weight="1"
                        android:drawableTop="@drawable/qrcode" style="@style/Widget.AppCompat.Button.Borderless"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
        </TableLayout>

    </LinearLayout>
</RelativeLayout>